[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-widget"
version = "1.0.0"
description = "A lightweight desktop system widget with clock, notes, and stats"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyQt5>=5.15.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/system-widget"
Repository = "https://github.com/yourusername/system-widget"
Issues = "https://github.com/yourusername/system-widget/issues"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"" = ["*.txt", "*.json"]